# burntrack-simulation

./: .gitignore  LICENSE  RAPPORT_SESSION_18_JUIN_2026.md  README.md  RESTRUCTURING.md  ReadIfAgent.md  VERIFICATION_REPORT.md  pm.md  pyproject.toml  real_african_dataset.csv  requirements-prod.txt  requirements.txt  synthetic_dataset.csv  whatsapp_update.txt
archive/docs_old/: session-ses_104d.md
archive/misc/: .{.swp
archive/rapport_old/: inflate_report_part2.py  simplify_report.py
archive/scripts_old/: download_real_data.sh  evaluate_ensemble.py  generate_synthetic.py  (+3 more)
burntrack/: __init__.py
cellular_automaton/: __init__.py  grid.py  mlp_corrector.py  rules.py  simulation.py
circuit/: Untitled Sketch 2.fzz
configs/: synthetic.json
data/: admins.json  burntrack-service-key.json
data_pipeline/: data_pipeline.py  download_era5_africa.py  sensor_fusion.py  synthetic_dataset.py
experiments/: calibrate_ca.py  calibration_report.md  real_fire_scenarios.yaml  validate_ca_fire.py  validate_ca_with_pinn_corrector.py  validate_real_fire.py
models/: atlas_corrector_v2.pt  atlas_corrector_v2_config.json  corrector_v3_best.pt  history.json  rf_corrector.joblib  rf_feature_names.json  rf_scaler.joblib  scaler.joblib  xgb_scaler.joblib
rapport/: inflate_report.py  rapport_part2.tex  rapport_plbd_groupe7.tex  recover_original_latex.py  simplify_report_part2.py  stretch_report.py  stretch_report2.py
risk_map/: __init__.py  bouskoura_risk.py  ignition_selector.py  scenario_runner.py
robot_nav/: __init__.py  demo_bouskoura.py  planner.py  robot_server.py  waypoints.py
robot_vision/: README.md  requirements.txt
rothermel/: Dowload_data.py  Download_data.py  Download_dataOp.py  __init__.py  equations.py  features_engineering.py  fuel_models.py  fuels.py  generate_synthetic_dataset.py  ia_corrector.py  ia_corrector_v2.py  ia_corrector_v3.py  parameters.py  patch_fuel_models.py  requirements.txt  rothermel.py  rothermel_engine.py  rothermel_engine_v3.py  round-centaur-499312-c0-ad66328b8e04.json  spatial-lock-499311-n0-a34322af64cd.json  train_corrector_v3.py  train_ia.py
scripts/: build_from_local_firms.py  build_real_dataset.py  build_south_africa_dataset.py  debug_deep.py  debug_mlp.py  download_knysna_2017.py  download_srtm.py  download_table_mountain_2021.py  download_table_mountain_fire.py  download_worldcover.py  process_firms_csv.py  run_pipeline.py  train_corrector.py  train_ensemble.py  train_mlp_v2_full.py
tests/: test_pipeline.py
visualization/: api.py  barrier_demo.html  index.html  risk_map.py  server.py
(+139 files in other folders)
